--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,8 +19,7 @@ steps:
     containerRegistry: "Docker"
     repository: "AzureDevOpsBuild"
     tags: |
-      "tag1"
-      "tag2"
+      latest
 
 - task: "Docker@2"
   displayName: "Log out of Docker Hub"
