--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,19 +10,19 @@ steps:
   displayName: "Login to Docker Hub"
   inputs:
     command: "login"
-    containerRegistry: "Docker"
+    containerRegistry: "$(targetRegistry)"
 
 - task: Docker@2
-  displayName: "Build & Push"
+  displayName: "Build & Push container"
   inputs:
     command: "buildAndPush"
-    containerRegistry: "Docker"
-    repository: "AzureDevOpsBuild"
+    containerRegistry: "$(targetRegistry)"
+    repository: "$(targetRepo)"
     tags: |
       latest
 
 - task: "Docker@2"
-  displayName: "Log out of Docker Hub"
+  displayName: "Logout of Docker Hub"
   inputs:
-    command: "login"
-    containerRegistry: "Docker"
+    command: "logout"
+    containerRegistry: "$(targetRegistry)"
